<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">자바프로젝트_주소록</string>
    <string name="action_add">주소록추가</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="number">연락처</string>
    <string name="email">이메일</string>
    <string name="add">추가</string>
    <string name="cancel">취소</string>
    <string name="input_name">이름을 입력하세요.</string>
    <string name="input_age">나이를 입력하세요.</string>
    <string name="input_email">이메일을 입력하세요.</string>
    <string name="input_number">연락처를 입력하세요.</string>
    <string name="saveInfo">저장완료</string>
    <string name="close">닫기</string>
    <string name="logout">로그아웃</string>
    <string name="status_logout">로그아웃 상태</string>
    <string name="login">로그인</string>
    <string name="status_login">로그인 상태</string>
    <string name="viewList">리스트 보기</string>

</resources>
